shared/ns-project.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: project
  labels:
    name: project
