shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: log-and-pingpong
spec:
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: log-output
            port:
              number: 8082
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong
            port:
              number: 8083
